# seds-umd

./: README.md  SRR  greyscale.py  meeting-1.md  readme.md  tasks.md
communication/file-format/: readme.md
communication/file-format/csvtostring/: Cargo.toml
communication/file-format/csvtostring/src/: main.rs
communication/socket-programming/: client  client.c  readme.md  rustclient  rustserver  server  server.c
vision/extreme-compression/: readme.md
vision/kalman-filter/: readme.md
week-1/: git-tutorial.md  group-1.md  group-2.md  group-3.md  readme.md
week-2/: readme.md
week-3/challenge-1/: main.c  readme.md
week-3/challenge-2/: .gdb_history  main  main.c  readme.c  readme.md
week-3/challenge-3/: readme.md  solution.py
week-4/: readme.md
week-5/: readme.md
