[package]
name = "csvtutor"
version = "0.1.0"
authors = ["Madelyne Rossmann <madelyne.rossmann13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.0.0-beta.5"
serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.40"
serde_derive = "1"
